Spring/src/Spring/src/gen/JetBrains/ReSharper/Plugins/Spring/MyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from V:/Users/Emperor/Desktop/IDE_Dev/Rider_Projects/Pascal-lang/Spring/src/Spring/src/g4\MyParser.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace JetBrains.ReSharper.Plugins.Spring {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class MyParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		AND=1, ARRAY=2, BEGIN=3, BOOLEAN=4, CASE=5, CHAR=6, CHR=7, EXIT=8, CONST=9, 
		DIV=10, DO=11, DOWNTO=12, ELSE=13, OTHERWISE=14, END=15, FILE=16, FOR=17, 
		FORWARD=18, FUNCTION=19, GOTO=20, IF=21, IN=22, INTEGER=23, LABEL=24, 
		MOD=25, NIL=26, NOT=27, OF=28, OR=29, XOR=30, PACKED=31, PROCEDURE=32, 
		REAL=33, RECORD=34, REPEAT=35, SET=36, THEN=37, TO=38, TYPE=39, UNTIL=40, 
		VAR=41, WHILE=42, WITH=43, UNIT=44, INTERFACE=45, USES=46, STRING=47, 
		PASS=48, UNALIGNED=49, PLUS=50, MINUS=51, MULT=52, SLASH=53, ASSIGN=54, 
		COMMA=55, SEMI=56, COLON=57, LSHIFT=58, RSHIFT=59, LSHIFT2=60, RSHIFT2=61, 
		EQUAL=62, NOT_EQUAL=63, LT=64, LE=65, GE=66, GT=67, LPAREN=68, RPAREN=69, 
		LBRACK=70, LBRACK2=71, RBRACK=72, RBRACK2=73, POINTER=74, AT=75, DOT=76, 
		DOTDOT=77, LCURLY=78, RCURLY=79, WS=80, SINGLE_COMMENT=81, COMMENT_1=82, 
		COMMENT_2=83, IDENT=84, STRING_LITERAL=85, NUM_INT=86, NUM_REAL=87;
	public const int
		RULE_fileNode = 0, RULE_expression = 1, RULE_simpleExpression = 2, RULE_term = 3, 
		RULE_setOP = 4, RULE_factor = 5, RULE_set = 6, RULE_setContainer = 7, 
		RULE_functionDesignator = 8, RULE_parameterList = 9, RULE_actualParameter = 10, 
		RULE_identifier = 11, RULE_label = 12, RULE_unsignedNumber = 13, RULE_unsignedInteger = 14, 
		RULE_unsignedReal = 15, RULE_compoundStatement = 16, RULE_statement = 17, 
		RULE_unlabelledStatement = 18, RULE_structuredStatement = 19, RULE_gotoStatement = 20, 
		RULE_emptyStatement = 21, RULE_simpleStatement = 22, RULE_labeledStatement = 23, 
		RULE_assignmentStatement = 24, RULE_assignmentVariants = 25, RULE_variable = 26, 
		RULE_variableVariants = 27, RULE_statements = 28, RULE_conditionalStatement = 29, 
		RULE_ifStatement = 30, RULE_caseStatement = 31, RULE_caseListElement = 32, 
		RULE_constList = 33, RULE_constant = 34, RULE_constantChr = 35, RULE_unsignedConstant = 36, 
		RULE_repetetiveStatement = 37, RULE_whileStatement = 38, RULE_repeatStatement = 39, 
		RULE_forStatement = 40, RULE_forList = 41, RULE_withStatement = 42, RULE_varList = 43, 
		RULE_initialValue = 44, RULE_finalValue = 45;
	public static readonly string[] ruleNames = {
		"fileNode", "expression", "simpleExpression", "term", "setOP", "factor", 
		"set", "setContainer", "functionDesignator", "parameterList", "actualParameter", 
		"identifier", "label", "unsignedNumber", "unsignedInteger", "unsignedReal", 
		"compoundStatement", "statement", "unlabelledStatement", "structuredStatement", 
		"gotoStatement", "emptyStatement", "simpleStatement", "labeledStatement", 
		"assignmentStatement", "assignmentVariants", "variable", "variableVariants", 
		"statements", "conditionalStatement", "ifStatement", "caseStatement", 
		"caseListElement", "constList", "constant", "constantChr", "unsignedConstant", 
		"repetetiveStatement", "whileStatement", "repeatStatement", "forStatement", 
		"forList", "withStatement", "varList", "initialValue", "finalValue"
	};

	private static readonly string[] _LiteralNames = {
		null, "'and'", "'array'", "'begin'", "'boolean'", "'case'", "'char'", 
		"'chr'", "'exit'", "'const'", "'div'", "'do'", "'downto'", "'else'", "'otherwise'", 
		"'end'", "'file'", "'for'", "'forward'", "'function'", "'goto'", "'if'", 
		"'in'", "'integer'", "'label'", "'mod'", "'nil'", "'not'", "'of'", "'or'", 
		"'xor'", "'packed'", "'procedure'", "'real'", "'record'", "'repeat'", 
		"'set'", "'then'", "'to'", "'type'", "'until'", "'var'", "'while'", "'with'", 
		"'unit'", "'interface'", "'uses'", "'string'", "'pass'", "'Unaligned'", 
		"'+'", "'-'", "'*'", "'/'", "':='", "','", "';'", "':'", "'<<'", "'>>'", 
		"'shl'", "'shr'", "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'('", 
		"')'", "'['", "'(.'", "']'", "'.)'", "'^'", "'@'", "'.'", "'..'", "'{'", 
		"'}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", "CHAR", "CHR", "EXIT", 
		"CONST", "DIV", "DO", "DOWNTO", "ELSE", "OTHERWISE", "END", "FILE", "FOR", 
		"FORWARD", "FUNCTION", "GOTO", "IF", "IN", "INTEGER", "LABEL", "MOD", 
		"NIL", "NOT", "OF", "OR", "XOR", "PACKED", "PROCEDURE", "REAL", "RECORD", 
		"REPEAT", "SET", "THEN", "TO", "TYPE", "UNTIL", "VAR", "WHILE", "WITH", 
		"UNIT", "INTERFACE", "USES", "STRING", "PASS", "UNALIGNED", "PLUS", "MINUS", 
		"MULT", "SLASH", "ASSIGN", "COMMA", "SEMI", "COLON", "LSHIFT", "RSHIFT", 
		"LSHIFT2", "RSHIFT2", "EQUAL", "NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", 
		"RPAREN", "LBRACK", "LBRACK2", "RBRACK", "RBRACK2", "POINTER", "AT", "DOT", 
		"DOTDOT", "LCURLY", "RCURLY", "WS", "SINGLE_COMMENT", "COMMENT_1", "COMMENT_2", 
		"IDENT", "STRING_LITERAL", "NUM_INT", "NUM_REAL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MyParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static MyParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MyParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MyParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileNodeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CompoundStatementContext compoundStatement() {
			return GetRuleContext<CompoundStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(MyParser.Eof, 0); }
		public FileNodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileNode; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterFileNode(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitFileNode(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFileNode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileNodeContext fileNode() {
		FileNodeContext _localctx = new FileNodeContext(Context, State);
		EnterRule(_localctx, 0, RULE_fileNode);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			compoundStatement();
			State = 93;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SimpleExpressionContext[] simpleExpression() {
			return GetRuleContexts<SimpleExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SimpleExpressionContext simpleExpression(int i) {
			return GetRuleContext<SimpleExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] EQUAL() { return GetTokens(MyParser.EQUAL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUAL(int i) {
			return GetToken(MyParser.EQUAL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NOT_EQUAL() { return GetTokens(MyParser.NOT_EQUAL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOT_EQUAL(int i) {
			return GetToken(MyParser.NOT_EQUAL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LT() { return GetTokens(MyParser.LT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LT(int i) {
			return GetToken(MyParser.LT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LE() { return GetTokens(MyParser.LE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LE(int i) {
			return GetToken(MyParser.LE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] GE() { return GetTokens(MyParser.GE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GE(int i) {
			return GetToken(MyParser.GE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] GT() { return GetTokens(MyParser.GT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GT(int i) {
			return GetToken(MyParser.GT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IN() { return GetTokens(MyParser.IN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IN(int i) {
			return GetToken(MyParser.IN, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 2, RULE_expression);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			simpleExpression();
			State = 100;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 96;
					_la = TokenStream.LA(1);
					if ( !(((((_la - 22)) & ~0x3f) == 0 && ((1L << (_la - 22)) & ((1L << (IN - 22)) | (1L << (EQUAL - 22)) | (1L << (NOT_EQUAL - 22)) | (1L << (LT - 22)) | (1L << (LE - 22)) | (1L << (GE - 22)) | (1L << (GT - 22)))) != 0)) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					State = 97;
					simpleExpression();
					}
					} 
				}
				State = 102;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SimpleExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SetOPContext setOP() {
			return GetRuleContext<SetOPContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TermContext[] term() {
			return GetRuleContexts<TermContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TermContext term(int i) {
			return GetRuleContext<TermContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PLUS() { return GetTokens(MyParser.PLUS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PLUS(int i) {
			return GetToken(MyParser.PLUS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] MINUS() { return GetTokens(MyParser.MINUS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MINUS(int i) {
			return GetToken(MyParser.MINUS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] OR() { return GetTokens(MyParser.OR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OR(int i) {
			return GetToken(MyParser.OR, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] XOR() { return GetTokens(MyParser.XOR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode XOR(int i) {
			return GetToken(MyParser.XOR, i);
		}
		public SimpleExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simpleExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterSimpleExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitSimpleExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSimpleExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SimpleExpressionContext simpleExpression() {
		SimpleExpressionContext _localctx = new SimpleExpressionContext(Context, State);
		EnterRule(_localctx, 4, RULE_simpleExpression);
		int _la;
		try {
			int _alt;
			State = 112;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LBRACK:
			case LBRACK2:
				EnterOuterAlt(_localctx, 1);
				{
				State = 103;
				setOP();
				}
				break;
			case CHR:
			case NIL:
			case NOT:
			case UNALIGNED:
			case PLUS:
			case MINUS:
			case LPAREN:
			case AT:
			case IDENT:
			case STRING_LITERAL:
			case NUM_INT:
			case NUM_REAL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 104;
				term();
				State = 109;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 105;
						_la = TokenStream.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OR) | (1L << XOR) | (1L << PLUS) | (1L << MINUS))) != 0)) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 106;
						term();
						}
						} 
					}
					State = 111;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FactorContext[] factor() {
			return GetRuleContexts<FactorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FactorContext factor(int i) {
			return GetRuleContext<FactorContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PLUS() { return GetTokens(MyParser.PLUS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PLUS(int i) {
			return GetToken(MyParser.PLUS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] MINUS() { return GetTokens(MyParser.MINUS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MINUS(int i) {
			return GetToken(MyParser.MINUS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] MULT() { return GetTokens(MyParser.MULT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MULT(int i) {
			return GetToken(MyParser.MULT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SLASH() { return GetTokens(MyParser.SLASH); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SLASH(int i) {
			return GetToken(MyParser.SLASH, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DIV() { return GetTokens(MyParser.DIV); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIV(int i) {
			return GetToken(MyParser.DIV, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] MOD() { return GetTokens(MyParser.MOD); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MOD(int i) {
			return GetToken(MyParser.MOD, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] AND() { return GetTokens(MyParser.AND); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AND(int i) {
			return GetToken(MyParser.AND, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LSHIFT2() { return GetTokens(MyParser.LSHIFT2); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LSHIFT2(int i) {
			return GetToken(MyParser.LSHIFT2, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LSHIFT() { return GetTokens(MyParser.LSHIFT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LSHIFT(int i) {
			return GetToken(MyParser.LSHIFT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RSHIFT2() { return GetTokens(MyParser.RSHIFT2); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RSHIFT2(int i) {
			return GetToken(MyParser.RSHIFT2, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RSHIFT() { return GetTokens(MyParser.RSHIFT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RSHIFT(int i) {
			return GetToken(MyParser.RSHIFT, i);
		}
		public TermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_term; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTerm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TermContext term() {
		TermContext _localctx = new TermContext(Context, State);
		EnterRule(_localctx, 6, RULE_term);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PLUS || _la==MINUS) {
				{
				State = 114;
				_la = TokenStream.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
			}

			State = 117;
			factor();
			State = 135;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 127;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
					case 1:
						{
						State = 118;
						Match(MULT);
						}
						break;
					case 2:
						{
						State = 119;
						Match(SLASH);
						}
						break;
					case 3:
						{
						State = 120;
						Match(DIV);
						}
						break;
					case 4:
						{
						State = 121;
						Match(MOD);
						}
						break;
					case 5:
						{
						State = 122;
						Match(AND);
						}
						break;
					case 6:
						{
						State = 123;
						_la = TokenStream.LA(1);
						if ( !(_la==LSHIFT || _la==LSHIFT2) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						}
						break;
					case 7:
						{
						State = 124;
						_la = TokenStream.LA(1);
						if ( !(_la==RSHIFT || _la==RSHIFT2) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						}
						break;
					case 8:
						{
						{
						State = 125;
						Match(MULT);
						State = 126;
						Match(MULT);
						}
						}
						break;
					}
					State = 130;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==PLUS || _la==MINUS) {
						{
						State = 129;
						_la = TokenStream.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						}
					}

					State = 132;
					factor();
					}
					} 
				}
				State = 137;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SetOPContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SetContext[] set() {
			return GetRuleContexts<SetContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SetContext set(int i) {
			return GetRuleContext<SetContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PLUS() { return GetTokens(MyParser.PLUS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PLUS(int i) {
			return GetToken(MyParser.PLUS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] MINUS() { return GetTokens(MyParser.MINUS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MINUS(int i) {
			return GetToken(MyParser.MINUS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] MULT() { return GetTokens(MyParser.MULT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MULT(int i) {
			return GetToken(MyParser.MULT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] GT() { return GetTokens(MyParser.GT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GT(int i) {
			return GetToken(MyParser.GT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LT() { return GetTokens(MyParser.LT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LT(int i) {
			return GetToken(MyParser.LT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] EQUAL() { return GetTokens(MyParser.EQUAL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUAL(int i) {
			return GetToken(MyParser.EQUAL, i);
		}
		public SetOPContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_setOP; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.EnterSetOP(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMyParserListener typedListener = listener as IMyParserListener;
			if (typedListener != null) typedListener.ExitSetOP(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMyParserVisitor<TResult> typedVisitor = visitor as IMyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSetOP(this);
			else return visitor.VisitChildren(this);
		}
	}
